--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <img class="portrait" src="/images/robot.png">
+        <img class="portrait" src="/images/robot.jpeg">
     </div>
     
     {{>footer}}
