about page change

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,7 @@
     <div class="main-content">
         {{>header}}
         <img class="portrait" src="/images/robot.jpeg">
+        <p>This site was created by Raghav Mittal. It uses data from Weather stack and mapbox.com</p>
     </div>
     
     {{>footer}}
